@@ -1,0 +1,8 @@
+#comment=ignore
+p1=1
+p2=2=2
+p3:3=3
+p 4=4
+p5  = 5
+p6:6:6 a
+  multiline=ignore
